--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   dart_format: ^1.1.17
+  jwt_decode: ^0.3.1
 
 dev_dependencies:
   flutter_test:
