Solicitar e armazenar token para notificação

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,8 +1,16 @@
 plugins {
     id "com.android.application"
+    id 'com.google.gms.google-services'
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
+}
+
+dependencies {
+  implementation platform('com.google.firebase:firebase-bom:33.5.1')
+  implementation 'com.google.firebase:firebase-analytics'
+  implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+  implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
 }
 
 def localProperties = new Properties()
