--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: ^1.2.2
   shared_preferences: ^2.0.7
   dart_jsonwebtoken: ^2.14.0
+  firebase_messaging: ^15.1.5
   intl: 0.19.0
 
   # The following adds the Cupertino Icons font to your application.
